--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 *.py linguist-language=Python
+*.java linguist-language=Java
 *.js linguist-language=JavaScript
-node_modules/* linguist-vendored
-*.md linguist-documentation
